tests/js_error/source_locations/expression/assign/set_private_property.js
class C {
  set #foo(_) {
    throw new Error()
  }

  test() {
    this.#foo = 2;
  }
}

var c = new C();
c.test();